# authzed-py

./: .gitattributes  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  buf.gen.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: automatic-api-update.yaml  cla.yaml  lint.yaml  manual-api-update.yaml  publish-to-pypi.yml  test.yaml
arrakisapi/api/: acl_service_pb2.py  acl_service_pb2.pyi  acl_service_pb2_grpc.py  core_pb2.py  core_pb2.pyi  developer_pb2.py  developer_pb2.pyi  developer_pb2_grpc.py  namespace_pb2.py  namespace_pb2.pyi  namespace_service_pb2.py  namespace_service_pb2.pyi  namespace_service_pb2_grpc.py  watch_service_pb2.py  watch_service_pb2.pyi  watch_service_pb2_grpc.py
arrakisapi/healthcheck/: health_service_pb2.py  health_service_pb2.pyi  health_service_pb2_grpc.py
arrakisapi/internal/: internal_pb2.py  internal_pb2.pyi
arrakisapi/tests/: test_validation.py
arrakisclient/: aio.py  client.py  test_util.py  validation.py
arrakisclient/dsl/: sharewith.py
arrakisclient/tests/: test_client.py
arrakisclient/types/: errors.py  expand.py  namespace.py  parsers.py  tuple.py  zookie.py
arrakisclient/types/tests/: parser_test.py  test_namespaces.py  test_types.py
authzed/api/materialize/v0/: watchpermissions_pb2.py  watchpermissions_pb2.pyi  watchpermissions_pb2_grpc.py  watchpermissionsets_pb2.py  watchpermissionsets_pb2.pyi  watchpermissionsets_pb2_grpc.py
authzed/api/v0/: __init__.py  acl_service_pb2.py  acl_service_pb2.pyi  acl_service_pb2_grpc.py  acl_service_pb2_grpc.pyi  core_grpc.py  core_pb2.py  core_pb2.pyi  core_pb2_grpc.pyi  developer_grpc.py  developer_pb2.py  developer_pb2.pyi  developer_pb2_grpc.py  developer_pb2_grpc.pyi  namespace_pb2.py  namespace_pb2.pyi  namespace_pb2_grpc.pyi  namespace_service_pb2.py  namespace_service_pb2.pyi  namespace_service_pb2_grpc.py  namespace_service_pb2_grpc.pyi  watch_service_pb2.py  watch_service_pb2.pyi  watch_service_pb2_grpc.py  watch_service_pb2_grpc.pyi
authzed/api/v1/: __init__.py  __init__.pyi  client.py  core_grpc.py  core_pb2.py  core_pb2.pyi  debug_grpc.py  debug_pb2.py  debug_pb2.pyi  debug_pb2_grpc.pyi  error_reason_pb2.py  error_reason_pb2.pyi  experimental_service_pb2.py  experimental_service_pb2.pyi  experimental_service_pb2_grpc.py  experimental_service_pb2_grpc.pyi  openapi_grpc.py  openapi_pb2.py  openapi_pb2.pyi  openapi_pb2_grpc.pyi  permission_service_grpc.py  permission_service_pb2.py  permission_service_pb2.pyi  permission_service_pb2_grpc.py  permission_service_pb2_grpc.pyi  retryable_client.py  schema_pb2.py  schema_pb2_grpc.py  schema_service_grpc.py  schema_service_pb2.py  schema_service_pb2.pyi  schema_service_pb2_grpc.py  schema_service_pb2_grpc.pyi  watch_service_grpc.py  watch_service_pb2.py  watch_service_pb2.pyi  watch_service_pb2_grpc.py  watch_service_pb2_grpc.pyi
authzed/api/v1alpha1/: __init__.py  schema_grpc.py  schema_pb2.py  schema_pb2.pyi  schema_pb2_grpc.py  schema_pb2_grpc.pyi  watchresources_service_grpc.py  watchresources_service_pb2.py  watchresources_service_pb2.pyi  watchresources_service_pb2_grpc.py  watchresources_service_pb2_grpc.pyi
buf/validate/: validate_pb2.py  validate_pb2.pyi
examples/: basic.py
examples/arrakisclient/: README.md  basic.py  basic.yaml
examples/materialize/: QUICKSTART.md
examples/v0/: check.py  write.py
examples/v1/: bulk_check_permissions.py  bulk_import_export_relationships.py  check_permissions.py  import_bulk_relationships.py  read_schema.py  retryable_import_relationships.py  retryable_import_relationships_async.py  write_relationships.py  write_schemas.py
examples/v1alpha1/: read_schema.py  read_schema_async.py
google/rpc/: status_pb2.pyi
grpcutil/: __init__.py
protoc_gen_openapiv2/options/: annotations_pb2.py  annotations_pb2.pyi
src/authzed/api/v0/: core_pb2.py  core_pb2.pyi  developer_pb2.py  developer_pb2.pyi  developer_pb2_grpc.py
src/authzed/api/v1/: __init__.py  __init__.pyi  core_pb2.pyi  debug_pb2.py  debug_pb2.pyi  error_reason_pb2.pyi  permission_service_pb2.pyi  permission_service_pb2_grpc.py  permission_service_pb2_grpc.pyi  schema_service_pb2_grpc.py  (+2 more)
src/buf/validate/: validate_pb2.py  validate_pb2.pyi
src/google/api/: annotations_pb2.pyi  http_pb2.py  http_pb2.pyi
src/google/rpc/: status_pb2.py
src/protoc_gen_openapiv2/options/: openapiv2_pb2.py  openapiv2_pb2.pyi
src/validate/: validate_pb2.pyi
tests/: calls.py  conftest.py  insecure_client_test.py  misc_test.py  retryable_client_test.py  utils.py  v1_test.py
validate/: README.md  validate_pb2.py  validate_pb2.pyi
(+10 files in other folders)
