[tool.poetry]
authors = ["Authzed <support@authzed.com>"]
description = "Client library for SpiceDB."

# NOTE: These two lines must be kept together for the API update action to function
name = "authzed"
version = "0.14.1"
packages = [
  {include = "authzed"},
  {include = "validate"},
  {include = "grpcutil"},
]
readme = "README.md"

[tool.poetry.dependencies]
google-api-core = "^2.4.0"
google_api = "^0.1.12"
grpcio = "^1.54"
protobuf = ">=4.23,<5.0.0.dev0"
python = "^3.8"
typing-extensions = ">=3.7.4"

[tool.poetry.group.dev.dependencies]
black = ">=23.3,<25.0"
grpcio-tools = ">=1.59,<1.63"
isort = "^5.6.4"
mypy = "1.9.0"
mypy-protobuf = "3.5.0"
mock = "^5.1.0"
pyflakes = "^3.0.1"
pytest = ">=7.1.3,<9.0.0"
pytest-asyncio = ">=0.21,<0.24"
protoc-gen-validate = ">=0.4.1,<=1.0.4"

[tool.black]
exclude = '(^\.(.*)|^(.*)_pb2(_grpc)?\.py)'
line-length = 100

[tool.pytest.ini_options]
addopts = "-x"
log_level = "debug"
minversion = "6.0"

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 100
multi_line_output = 3
use_parentheses = true

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
