[tool.poetry]
authors = ["Authzed <support@authzed.com>"]
description = "Client library for SpiceDB."

name = "authzed"
# The version is set at publish time with a call to `poetry version -s <tag>`,
# where the tag comes from the release.
version = "0.0.0"
packages = [
  {include = "authzed"},
  {include = "validate"},
  {include = "grpcutil"},
]
readme = "README.md"

[tool.poetry.dependencies]
grpcio = "^1.63"
protobuf = ">=5.26,<6"
python = "^3.8"
grpc-interceptor = "^0.15.4"
googleapis-common-protos = "^1.65.0"

[tool.poetry.group.dev.dependencies]
black = ">=23.3,<25.0"
grpc-stubs = "^1.53"
grpcio-tools = ">=1.63,<1.67"
isort = "^5.6.4"
mypy = "1.12.0"
mypy-protobuf = "3.6.0"
mock = "^5.1.0"
pyflakes = "^3.0.1"
pytest = ">=7.1.3,<9.0.0"
pytest-asyncio = ">=0.21,<0.25"
protoc-gen-validate = ">=0.4.1,<=1.1.0"
types-protobuf = ">=5.26,<6.0"
typing-extensions = ">=3.7.4,<5"

[tool.black]
exclude = '(^\.(.*)|^(.*)_pb2(_grpc)?\.py)'
line-length = 100

[tool.mypy]
explicit_package_bases = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["google.rpc.*", "grpcutil"]

[tool.pytest.ini_options]
addopts = "-x"
log_level = "debug"
minversion = "6.0"
asyncio_mode = "auto"

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 100
multi_line_output = 3
use_parentheses = true

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
