[project]
name = "authzed"
version = "0.0.0"
description = "Client library for SpiceDB."
license = "Apache-2.0"
authors = [{ name = "Authzed", email = "support@authzed.com" }]
requires-python = ">=3.10,<4"
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "grpcio~=1.63",
  "protobuf>=5.26,<7",
  "grpc-interceptor>=0.15.4,<0.16",
  "googleapis-common-protos>=1.65.0,<2",
  "protovalidate>=0.7.1,<1.1.0",
]

[dependency-groups]
dev = [
  "grpc-stubs~=1.53",
  "grpcio-tools>=1.63,<1.77",
  "mypy==1.19.1",
  "mypy-protobuf==4.0.0",
  "mock>=5.1.0,<6",
  "pytest>=7.1.3,<9.0.0",
  "pytest-asyncio>=0.21,<1.3",
  "types-protobuf>=5.26,<7.0",
  "typing-extensions>=3.7.4,<5",
  "ruff>=0.13.0,<0.15",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
# This is the list of modules that we want to package
# (otherwise it just packages authzed)
module-name = [
  "authzed",
  "buf",
  "google",
  "grpcutil",
  "protoc_gen_openapiv2",
  "validate",
]
# This allows us to package modules that don't have
# an __init__.py, which none of the generated gRPC
# modules do.
namespace = true

[tool.ruff]
exclude = ["*_pb2.py", "*_grpc.py", "*_pb2.pyi", "*_grpc.pyi"]
line-length = 100

[tool.mypy]
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["google.rpc.*", "grpcutil"]

[tool.pytest.ini_options]
addopts = "-x"
log_level = "debug"
minversion = "6.0"
asyncio_mode = "auto"
